    - Removed unused `NextRequest` import.
    - Changed `let generatedResult` to `const` as it was only assigned once within its scope.
    - Added explicit types for caught errors (`unknown`) and handled type checking.
- `/src/app/api/upload/route.ts`:
    - Corrected import path for `@/lib/prisma`.
    - Removed unused `uploadData` variable.
    - Added explicit types for caught errors (`unknown`) and handled type checking.
- `/src/app/app/page.tsx`:
    - Corrected import path for `@/lib/prisma`.
    - Fixed unescaped apostrophe in text (`haven\\'t`).
- `/src/app/app/report/[id]/page.tsx`:
    - Corrected import path for `@/lib/prisma`.
    - **Reverted function signature to standard Next.js App Router format:** `export default async function ReportPage({ params }: { params: { id: string } })` to resolve persistent type errors.
    - Removed unused `NextPage` type import and `ReportPageProps` interface.
- `/src/app/app/report/[id]/report-display.tsx`:
    - Removed unused imports: `Font`, `Report`, `SubscriptionStatus`.
    - Added explicit type `RiskFlag[]` for parsed `riskFlags`.
    - Used `Prisma.JsonValue` for `riskFlags` prop type.
- `/next.config.ts`:
    - Corrected type definition using JSDoc `/** @type {import("next").NextConfig} */` instead of importing `NextConfig` type.

**Build Status (v2):**
- `npm run build` failed with persistent `PageProps` type error in `src/app/app/report/[id]/page.tsx`.




### v4 (2025-05-03)

*   **Fix:** Inlined `src/lib/auth.ts`, `src/lib/prisma.ts`, `src/lib/supabase.ts`, `src/lib/stripe.ts`, and `src/lib/openai.ts` logic directly into the respective API route files (`src/app/api/**/route.ts`) to bypass persistent module resolution errors during the build process. Original lib files remain but are no longer imported by API routes.
*   **Fix:** Ensured critical files (`src/lib/auth.ts`, `src/lib/prisma.ts`, `src/app/globals.css`) are present (though lib files are now effectively unused by API routes due to inlining).
