@@ -1,8 +1,9 @@
 
 import { getServerSession } from "next-auth/next";
-import { authOptions } from "@/lib/auth"; // Updated import
+// Changed imports to relative paths (Option B)
+import { authOptions } from "../../lib/auth"; 
 import { redirect } from "next/navigation";
-import prisma from "@/lib/prisma";
+import prisma from "../../lib/prisma";
 import Link from "next/link";
 
 // Helper function to fetch reports - could be moved to a service/lib file
