@@ -84,3 +84,11 @@ This update addressed Vercel build failures related to module resolution, ESLint
 *   **Fix:** Inlined `src/lib/auth.ts`, `src/lib/prisma.ts`, `src/lib/supabase.ts`, `src/lib/stripe.ts`, and `src/lib/openai.ts` logic directly into the respective API route files (`src/app/api/**/route.ts`) to bypass persistent module resolution errors during the build process. Original lib files remain but are no longer imported by API routes.
 *   **Fix:** Ensured critical files (`src/lib/auth.ts`, `src/lib/prisma.ts`, `src/app/globals.css`) are present (though lib files are now effectively unused by API routes due to inlining).
 
+
+
+
+### v5 (2025-05-03)
+
+*   **Fix:** Changed path alias imports (`@/lib/...`) to relative paths (`../../lib/...` or `../../../../lib/...`) in `src/app/app/page.tsx` and `src/app/app/report/[id]/page.tsx` to resolve build errors (Option B).
+*   **Note:** Verified `src/app/layout.tsx` already used a relative path for `globals.css`.
+
